# cleese

./: .gitignore  README.md  cleese.py  command.py  pylintrc  pyproject.toml  requirements.txt  setup.py
cleese/: __async_main__.py  __init__.py  __main__.py  async_clients.py  async_commands.py  async_main.py  cleese.py  clients.py  command.py  commands.py  config.py  main.py  utils.py
completion/bash/: cleese
completion/zsh/: _cleese
src/cleese/: __main__.py  clients.py  command.py  commands.py  config.py  utils.py
