[tool.poetry]
name = "cleese-mpd"
version = "0.12.0"
description = "An MPD client based on ampdup."
authors = ["Tarcisio Eduardo Moreira Crocomo <tarcisio.crocomo@gmail.com>"]
license = "MIT"
packages = [
    { include = "cleese" },
]

[tool.poetry.dependencies]
python = "^3.7"
carl = "^0.0.7"
ampdup = "^0.3.0"

[tool.poetry.scripts]
cleese = "cleese.__main__:run_main"
