[tool.poetry]
name = "cleese-mpd"
version = "0.13.0"
description = "An MPD client based on ampdup."
authors = ["Tarcisio Eduardo Moreira Crocomo <tarcisio.crocomo@gmail.com>"]
license = "MIT"
packages = [
    { include = "cleese" },
]

[tool.poetry.dependencies]
python = "^3.7"
carl = "^0.0.7"
ampdup = "^0.6.0"

[tool.poetry.scripts]
cleese = "cleese.__main__:run_main"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
pylint-quotes = "^0.1.9"
