[tool.poetry]
name = "cleese-mpd"
version = "0.15.0"
description = "An MPD client based on ampdup."
authors = ["Tarcisio Eduardo Moreira Crocomo <tarcisio.crocomo@gmail.com>"]
license = "MIT"
packages = [
    { include = "cleese" },
]

[tool.poetry.dependencies]
python = "^3.7"
carl = "^0.0.7"
ampdup = "^0.8.0"

[tool.poetry.scripts]
cleese = "cleese.__main__:run_main"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
pylint-quotes = "^0.1.9"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

